--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li>Creatures</li>
       <li>Colorful backgrounds</li>
     </ul>
-    <img src="images/image01.png" alt="My test image" />
+    <img src="images/new01.png" alt="My test image" />
     <h3>Copyright by Cloudia Hsieh 2023</h3>
   </body>
 </html>
