--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     </ul>
     <img src="images/new01.png" alt="My test image" />
     <h3>Copyright by Cloudia Hsieh 2023</h3>
+    <button>Change user</button>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
