--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="favicon.ico" type="image/smile icon" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
@@ -8,7 +9,7 @@
   </head>
   <body>
     <h1>This is a website showing the concept of cute artAI models</h1>
-    <p>All the pictures are from the <a href="https://playgroundai.com/create">Playground AI</a> and were created using the Stable Diffusion 1.5 model and the Playtoon style. The collection includes:</p>
+    <p>All the pictures are from the <a href="https://playgroundai.com/create" title="the amazing AI creation" target="_blank">Playground AI</a> and were created using the Stable Diffusion 1.5 model and the Playtoon style. The collection includes:</p>
     <ul>
       <li>Some scenes</li>
       <li>Light</li>
@@ -17,7 +18,6 @@
     </ul>
     <img src="images/new01.png" alt="My test image" />
     <h3>Copyright by Cloudia Hsieh 2023</h3>
-    <button>Change user</button>
-    <script src="scripts/main.js"></script>
   </body>
 </html>
+<p>A link to <a href="https://www.mozilla.org/" title="The Mozilla homepage" target="_blank" >my favourite website.<a/></p>
