--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="favicon.ico" type="image/smile icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/smile icon.png" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
