--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <li>Creatures</li>
       <li>Colorful backgrounds</li>
     </ul>
-    <img src="images/new01.png" alt="My test image" />
+    <img src="images/image005.png" alt="My test image" />
+    <img src="images/image006.png" alt="My test image" />
+    <img src="images/image007.png" alt="My test image" />
     <h3>Copyright by Cloudia Hsieh 2023</h3>
   </body>
 </html>
